increasing gc logging